--- a/src/components/forex1.css
+++ b/src/components/forex1.css
@@ -18,6 +18,7 @@
     margin-top: -170px;
     margin-left: 80px;
     margin-bottom: 50px;
+    
   }
   
   .title {
@@ -28,6 +29,7 @@
     word-wrap: break-word;
     max-width: 700px;
     color: white;
+   
   }
   
   .buttons {
@@ -89,6 +91,7 @@
     display: flex;
     align-items: flex-end;
     padding-left: 0px;
+   
   }
   
   .img-holder img {
@@ -110,4 +113,46 @@
     height: auto;
     z-index: 1;
   }
+  @media (max-width: 1100px) {
+    .header {
+        height: 50vh;
+        min-height: 900px;
+        border-bottom: 1px solid #dee2e6;
+        background-color: rgba(14, 14, 50, 0.879);
+        overflow: hidden;
+      }
+    .container1 {
+      flex-direction: column;
+    }
   
+    .infos {
+      margin-top:15%;
+      margin-left:5%;
+      text-align: center;
+      
+    }
+  
+    .img-holder {
+        margin-top: 0%;
+      margin-left: 100px;
+    }
+  
+    .img-holder img {
+      margin-left: 0;
+      margin-bottom: 0;
+    }
+  
+    .img-holder img.overlay-image {
+      right: 0;
+      transform: translateX(0);
+      width: 30%;
+      margin-bottom: 2rem;
+    }
+    .buttons {
+        margin-top: 20px;
+        display: flex;
+        margin-left: 15%;
+        
+      }
+      
+  }
