--- a/src/components/assets/AssetsSection.css
+++ b/src/components/assets/AssetsSection.css
@@ -1,26 +1,46 @@
 .container {
    
     display: flex;
-    justify-content: center;
     align-items: center;
     z-index: 1;
+    margin-top: 4%;
+    justify-content: space-between;
   }
   
   .item1 {
-   
+    
     flex: 1;
     padding: 20px;
     text-align: start;
     z-index: 1;
+  }
+  .righSide{
+    margin-top: -9%;
+  }
+ .searchBar {
+  max-width: 100%;
+  margin-left :-10%; ;
+  
+ }
+  
+  .tableau {
     
-   
+    
+    margin-left: -10%;
+    width: 100%;
+    height: auto;
+
   }
   .item1 p {
+    margin-left: 10%;
     text-align: start;
     font-size:smaller;
-    color: rgb(84, 78, 78);
+    color: rgb(63, 56, 56);
+    max-width: 50%;
   }
   .h3_tit {
+    margin-left: 10%;
+    max-width: 70%;
       font-weight: 800;
       font-size: 40px;
       line-height: 50px;
@@ -35,7 +55,7 @@
 
   
   .list {
-      
+      margin-left: 10%;
       width: 600px;
       max-width: 90%;
      
@@ -121,7 +141,7 @@
       max-width:fit-content;
       align-self: start;
     }
-    @media screen and (max-width: 950px){
+    @media screen and (max-width: 900px){
       .container {
         display: flex;
         flex-direction: column; /* Set flex-direction to column */
@@ -140,7 +160,25 @@
       p {
         font-size: 12px;
       }
-    
+      .item1{
+        max-width: 100%;
+      }
+      .item2 {
+        margin-left: 15%;
+        width: 100%;
+      }
+      .righSide{
+        margin-top: 4%;
+        margin-bottom: 10%;
+      }
+      .item1 p {
+        margin-left: 10%;
+        text-align: start;
+        font-size:smaller;
+        color: rgb(63, 56, 56);
+        max-width: 80%;
+      }
     }
-     
+  
+   
     
