--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -157,6 +157,7 @@
   }
   .nav-links li{
     list-style: none;
+    margin-top: 7%;
   }
   .nav-links li a{
     color: #ffffff;
@@ -165,7 +166,7 @@
     font-weight: 500;
     padding: 9px 15px;
     border-radius: 5px;
-    transition: all 0.3s ease;
+    
   }
  
 
