--- a/src/components/forex.css
+++ b/src/components/forex.css
@@ -3,6 +3,7 @@ h6 {
     margin-bottom: 0.5rem;
   }
   .header {
+    width: 100%;
     height: 30vh;
     min-height: 580px;
     border-bottom: 1px solid #dee2e6;
