--- a/src/components/forex1.css
+++ b/src/components/forex1.css
@@ -4,6 +4,7 @@
     border-bottom: 1px solid #dee2e6;
     background-color: rgba(14, 14, 50, 0.879);
     overflow: hidden;
+    width: 100%;
   }
   
   .container1  {
@@ -64,7 +65,7 @@
   }
   
   .blue-button:hover {
-    background-color: rgb(80, 127, 192);
+    background-color: rgb(148, 184, 233);
   }
   
   .transparent-button {
