--- a/src/components/tradingSteps.css
+++ b/src/components/tradingSteps.css
@@ -7,6 +7,7 @@
     padding: 20px; /* Adjust the padding as needed */
     background-color: #ffffff; /* Optional: Add a background color */
     height: 40vh;
+    margin-left:5% ;
     
     
   }
@@ -16,7 +17,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-left: 1%;
+    
     width: 25%;
   }
   
@@ -30,6 +31,8 @@
   
   .steps .arrow {
     font-size:300%;
+    margin-bottom: 5%;
+    margin-right: 5%;
     color: rgb(14, 83, 129);
   }     
   
@@ -79,7 +82,7 @@
   
   
   .start-trading-btn:hover {
-    background-color: rgb(99, 148, 160);
+    background-color: rgb(128, 187, 202);
   }
   .button-text-container {
     max-height: 2%; /* Adjust the height to decrease the height of the text */
